# Youforge-Max

./: .gitignore  CHANGELOG.md  EDITOR_DESIGN.md  MANUAL.md  MAX_PLAN.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fetch-llama.sh  llama-android.cpp
app/src/main/java/eu/cisodiagonal/youforge/: MainActivity.kt
app/src/main/java/eu/cisodiagonal/youforge/asr/: AudioPcmDecoder.kt  AudioTranscriber.kt  VoskModelManager.kt
app/src/main/java/eu/cisodiagonal/youforge/editor/: EditorExporter.kt  EditorModels.kt  ExportJobs.kt  VideoEditorScreen.kt  VideoExportService.kt
app/src/main/java/eu/cisodiagonal/youforge/thumb/: AiProvider.kt  Contrast.kt  LlamaBridge.kt  LlamaCppEngine.kt  ModelDownloadService.kt  ModelDownloads.kt  Presets.kt  (+11 more)
app/src/main/java/eu/youforgemax/: MainActivity.kt
app/src/main/java/eu/youforgemax/asr/: AudioPcmDecoder.kt  AudioTranscriber.kt  VoskModelManager.kt
app/src/main/java/eu/youforgemax/editor/: EditorExporter.kt  EditorModels.kt  ExportJobs.kt  VideoEditorScreen.kt  VideoExportService.kt
app/src/main/java/eu/youforgemax/thumb/: AiProvider.kt  Contrast.kt  LlamaBridge.kt  LlamaCppEngine.kt  ModelDownloadService.kt  ModelDownloads.kt  ModelManager.kt  OnDeviceLlm.kt  OverlaySpec.kt  Presets.kt  Settings.kt  Sticker.kt  TemplateProvider.kt  ThumbScreen.kt  ThumbnailRenderer.kt  Variants.kt  VideoStills.kt  VisionTools.kt
app/src/main/java/eu/youforgemax/video/: BandProcessor.kt  Dsp.kt  Loudness.kt  MediaProcessor.kt  NormalizeJobs.kt  NormalizeService.kt  Presets.kt  PreviewPlayer.kt  VideoScreen.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  sticker_arrow.xml  sticker_circle.xml  sticker_fire.xml  sticker_fish.xml
app/src/main/res/layout/: yf_player.xml
app/src/main/res/values/: ic_launcher_background.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
(+22 files in other folders)
